
CHANGELOG

Boost V1.47.0
- V2.3.0
- After preprocessing the body of any #pragma wave option() the wave tool now 
  concatenates all adjacent string literals into a single string literal.
- Fixed whitespace handling, added a corresponding set of test cases 
  (t_9_020.cpp)
- Added a new preprocessing hook: locate_include_file allowing to customize the
  way include files are located.

Boost V1.46.0
- V2.2.0
- Added recognition of C++0x keywords to Re2C lexers.
- Added --c++0x command line option to Wave to enabling the recognition of 
  C++0x keywords, converting those to C++0x tokens.
- Adapted all of the library to play well with Boost.Filesystem V3 (which is 
  the default from now on).
- Added support for extended character and string literals, added test case
  (which required to add C++0x support to the test application).
- Added proper predefined macros fro --c++0x mode. __cplusplus is currently 
  defined to 201101L, but this will change when the Standard is finalized.
- Fixed a problem with object like macros, which when being adjacent to a 
  parenthesis, caused the parenthesis to disappear when the macro expansion
  was suppressed by the expanding_object_like_macro() hook function.
- Fixed a bug in pragma option(preserve), missing to set to preserve=1 if 
  after the previous value was preserve=2.
- Changed the --preserve option of the wave tool to interprete the integer 
  argument in a slightly different way: 
      0: no whitespace is preserved, 
      1: only begin of line whitespace is preserved, 
      2: only begin of line whitespace and comments are preserved, 
      3: all whitespace is preserved
  The #pragma wave option(preserve) now supports these arguments: 
  [0|1|2|3|push|pop].

Boost V1.45.0
- V2.1.0
- Token pasting is well formed only as long as the formed token(s) are 
  pp_tokens as defined by the C++0x Standard. Until now, Wave allowed for 
  non-pp_tokens to be formed in --variadics mode. 